package fly;

public interface Fly {
    void fly();

}
