package fly;

public class FlyNoWay implements Fly{

    @Override
    public void fly() {
        System.out.println("no fly");
    }

}
