package fly;

public class FlyWithWings implements Fly {

    @Override
    public void fly() {
        System.out.println("진짜 날기");
    }

}
