package quack;

public interface Quack {
    void makeSound();
}
