package quack;

public class RealQuack implements Quack{

    @Override
    public void makeSound() {
        System.out.println("Queck Queck");
    }

}
